      photo by Flickr user "Nicholas_T"
      Creative Commons Attribution 2.0 Generic
      http://creativecommons.org/licenses/by/2.0/deed.en

    * String Edges - Draw string-like patters around the screen.
      String Corner - Draw aligned string-like patterns.
      String 'V' - Draw free-form string-like patterns.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * Magic Tool Improvememnts:
    --------------------------
    * Added "_switchin()" and "_switchout()" functions to Magic tool API,
      to tell Magic tools when they are selected or deselected, or when
      their mode changes..

    * Added "_modes()" function to Magic tool API, so Magic tool plugins
      can tell Tux Paint what modes it accepts, 'paint' or 'fullscreen'.

    * "_click()" function is now given a 'mode' value, corresponding to the
      mode the current tool is in.

    * "_get_description()" function is now given a 'mode' value, and is
      called once for each mode a particular tool claims to support.
      (e.g., "which=0,mode=MODE_PAINT", then "which=1,mode=MODE_PAINT",
      then "which=1,mode=MODE_FULLSCREEN")

    * "Paint" and "Fullscreen" control buttons added to Magic tool
      selector UI.  Can be disabled with "--nomagiccontrols".

    * "Negative", "Tint", "Glass Tile", "Darken" and "Lighten" tools
      can all now affect the entire image.

  * System-Related Improvements:
    ----------------------------
    * 'savedir' and 'datadir' paths given in configuration files
      (e.g., ~/.tuxpaintrc) now have any environment variables and tildes
      (e.g., "~" for $HOME, or "~username" for 'username's home directory)
      expanded.
      NOTE: Environment variable expansion via 'wordexp()' -- currently
      Linux-only.
      NOTE: 'printcommand' and 'altprintcommand' options not currently parsed
      for env. vars.

    * On systems that use postscript_print (Linux and other Unix-likes),