@@ -64,7 +64,7 @@ SDL_Surface * waves_get_icon(magic_api * api, int which)
   char fname[1024];
 
   if (!which) snprintf(fname, sizeof(fname), "%s/images/magic/waves.png", api->data_directory);
-  else snprintf(fname, sizeof(fname), "%s/images/magic/waves-v.png", api->data_directory);
+  else snprintf(fname, sizeof(fname), "%s/images/magic/wavelet.png", api->data_directory);
 
   return(IMG_Load(fname));
 }
